--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.21.0",
     "graphql": "^15.4.0",
     "koa": "^2.13.0",
+    "koa-body": "^4.2.0",
     "koa-bodyparser": "^4.3.0",
     "koa-router": "^10.0.0",
     "nodemon": "^2.0.6",
